made the nr of checks to be displayed configureable + none is a valid response state now

--- a/resources/public/stylesheets/base.css
+++ b/resources/public/stylesheets/base.css
@@ -23,6 +23,12 @@ body {
     color: black;
 }
 
+.none {
+    background-color: #2c3e50;
+    font-size: 15px;
+    color: #2980b9;
+}
+
 div.check-result-container {
     width: 100%;
 }
