--- a/resources/public/stylesheets/base.css
+++ b/resources/public/stylesheets/base.css
@@ -4,7 +4,6 @@ body {
     color: #2980b9;
 }
 
-
 .error {
     background-color: red;
     font-size: 15px;
@@ -43,11 +42,28 @@ div.check-header {
     font-size: 25px;
 }
 
-div.env-results {
+div.overall-none {
+    opacity: 0;
+}
+div.overall-ok {
+    border: solid springgreen 1px;
+}
+div.overall-warning {
+    border: solid #fff922 1px;
+}
+div.overall-error {
+    border: solid red 1px;
+}
+
+
+div.env-results-container {
     float:left;
-    padding-left: 3%;
+}
+div.env-single-results {
+    opacity: 0.2;
 }
 div.env-header {
     font-size: 20px;
-    color: white;
+    color: black;
+    text-align: center;
 }
