readable european timestamps + last check time on env-overview

--- a/resources/public/stylesheets/base.css
+++ b/resources/public/stylesheets/base.css
@@ -82,6 +82,10 @@ div.env-results-container {
     float:left;
 }
 
+span.last-check {
+    color: #e0f8ff;
+}
+
 div.env-header {
     font-size: 25px;
     color: black;
