add acknowledged-checks which exist for a given timespan and will be used to display them in a different color to prevent error blindness

--- a/resources/public/stylesheets/base.css
+++ b/resources/public/stylesheets/base.css
@@ -23,6 +23,13 @@ body {
     background-color: rgba(0, 255, 127, 0.35);
 }
 
+.acknowledged {
+    background-color: #49A8FF;
+    font-size: 20px;
+    color: darkgray;
+    background-color: rgba(73, 168, 255, 1);
+}
+
 .env-header.error {
     background-color: rgba(255, 0, 0, 1);
 }
