a nicer overall-status for the env-overview

--- a/resources/public/stylesheets/base.css
+++ b/resources/public/stylesheets/base.css
@@ -130,3 +130,29 @@ div.env-header {
 .submit-icon:active polyline {
     fill: white;
 }
+
+.xray-container {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
+
+.overall-status-error {
+    background-color: rgba(255, 0, 0, .3);;
+}
+
+.overall-status-warning {
+    background-color: rgba(255, 249, 34, .3);
+}
+
+.overall-status-ok {
+    background-color: rgba(0, 255, 127, .3);;
+}
+
+.overall-status-defunct {
+    background-color: rgba(241, 70, 255, .3);
+}
+
+.overall-status-acknowledged {
+    background-color: rgba(100, 207, 255, .3);
+}
