--- a/resources/public/stylesheets/overview.css
+++ b/resources/public/stylesheets/overview.css
@@ -13,3 +13,46 @@
     margin-top: 10px;
     width: 95%;
 }
+
+.overview-header-left {
+    float: left;
+    width: 40%;
+}
+
+.overview-header-right {
+    float: left;
+    width: 60%;
+    font-size: 10vh;
+    color: white;
+}
+
+@keyframes blinking {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+.warning-header{
+    color: rgba(255, 249, 34, 1);
+}
+
+.error-header{
+    color: rgba(255, 0, 0, 1);
+}
+
+.ok-header{
+    color: rgba(0, 255, 127, 1);
+}
+
+.defunct-header{
+    color: rgba(241, 70, 255,1);
+}
+
+.acknowledged-header{
+    color: rgba(100, 207, 255, 1);
+}
+
+.warning-header, .error-header, .defunct-header {
+    animation-name: blinking;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+}
