--- a/resources/public/stylesheets/base.css
+++ b/resources/public/stylesheets/base.css
@@ -1,7 +1,16 @@
+:root{
+    --error-color: rgba(255, 0, 0, 1);
+    --warning-color: rgba(255, 249, 34, 1);
+    --ok-color: rgba(0, 255, 127, 1);
+    --acknowledged-color: rgba(73, 168, 255, 1);
+    --defunct-color: rgba(241, 70, 255,1);
+}
+
 body {
     font-family: sans-serif;
     background-color: #2c3e50;
     color: #2980b9;
+    margin:0;
 }
 
 .error {
@@ -129,12 +138,6 @@ div.env-header {
 
 .submit-icon:active polyline {
     fill: white;
-}
-
-.xray-container {
-    width: 100%;
-    height: 100%;
-    overflow: auto;
 }
 
 .overall-status-error {
