--- a/resources/app/stylesheets/_checks.scss
+++ b/resources/app/stylesheets/_checks.scss
@@ -23,7 +23,8 @@ section.checks {
   .check {
     & > header {
       color: rgba(255, 255, 255, 0.5);
-      margin-top: 1em;
+      margin-top: 0.5em;
+      font-size: 1.75em;
     }
 
     .results {
@@ -38,6 +39,7 @@ section.checks {
           color: rgba(0, 0, 0, 0.5);
           padding: 0;
           margin: 0;
+          text-transform: uppercase;
         }
       }
 
